--- a/src/package.json
+++ b/src/package.json
@@ -4,13 +4,17 @@
   "description": "You will build an application that lets users round up the change for each purchase and set it as a donation.",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jest": "^29.5.0",
-    "readline-sync": "^1.4.10"
+    "chalk": "^4.1.2",
+    "nanoid": "^3.3.6"
+  },
+  "devDependencies": {
+    "jest": "^27.5.1"
   }
 }
